<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">Select your Pepe</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <!-- Pepe Strings! -->
    <string name="Look_Label">Look</string>
    <string name="Turn_Label">Turn</string>
    <string name="Flap_Button">Flap</string>
    <string name="Tweet_Button">Tweet</string>
    <string name="Laser_Button">Laser</string>
    <string name="Settings_Button">Settings</string>
    <string name="Blink_Button">Blink</string>
    <string name="WinkR_Button">Wink Right</string>
    <string name="WinkL_Button">Wink Left</string>
    <string name="Tail_Button">Tail</string>
    <string name="Focus_Button">Focus</string>
    <string name="FlapR_Button">Flap Right</string>
    <string name="FlapL_Button">Flap Left</string>
    <string name="Red_Alert_Button">Red Alert</string>
    <string name="Animate_Button">Animate</string>


    <!-- Servo Strings! -->
    <string name="tweet_servo_min">Tweet Servo Min</string>
    <string name="tweet_servo_min_key">pref_key_tweet_servo_min</string>
    <string name="tweet_servo_max">Tweet Servo Max</string>>
    <string name="tweet_servo_max_key">pref_key_tweet_servo_max</string>
    <string name="tweet_servo_min_default">0</string>
    <string name="tweet_servo_max_default">9</string>

    <string name="flap_left_servo_min">Flap Left Servo Min</string>
    <string name="flap_left_servo_min_key">pref_key_flap_left_servo_min</string>
    <string name="flap_left_servo_max">Flap Servo Max</string>>
    <string name="flap_left_servo_max_key">pref_key_flap_left_servo_max</string>
    <string name="flap_left_servo_min_default">0</string>
    <string name="flap_left_servo_max_default">90</string>

    <string name="flap_right_servo_min">Flap Right Servo Min</string>
    <string name="flap_right_servo_min_key">pref_key_flap_right_servo_min</string>
    <string name="flap_right_servo_max">Flap Right Servo Max</string>>
    <string name="flap_right_servo_max_key">pref_key_flap_right_servo_max</string>
    <string name="flap_right_servo_min_default">0</string>
    <string name="flap_right_servo_max_default">90</string>

    <string name="blink_left_servo_min">Blink Left Servo Min</string>
    <string name="blink_left_servo_min_key">pref_key_blink_left_servo_min</string>
    <string name="blink_left_servo_max">Blink Servo Max</string>>
    <string name="blink_left_servo_max_key">pref_key_blink_left_servo_max</string>
    <string name="blink_left_servo_min_default">0</string>
    <string name="blink_left_servo_max_default">180</string>

    <string name="blink_right_servo_min">Blink Right Servo Min</string>
    <string name="blink_right_servo_min_key">pref_key_blink_right_servo_min</string>
    <string name="blink_right_servo_max">Blink Right Servo Max</string>>
    <string name="blink_right_servo_max_key">pref_key_blink_right_servo_max</string>
    <string name="blink_right_servo_min_default">0</string>
    <string name="blink_right_servo_max_default">180</string>

    <string name="turn_servo_min">Turn Servo Min</string>
    <string name="turn_servo_min_key">pref_key_turn_servo_min</string>
    <string name="turn_servo_max">Turn Servo Max</string>>
    <string name="turn_servo_max_key">pref_key_turn_servo_max</string>
    <string name="turn_servo_min_default">0</string>
    <string name="turn_servo_max_default">180</string>

    <string name="look_servo_min">Look Servo Min</string>
    <string name="look_servo_min_key">pref_key_look_servo_min</string>
    <string name="look_servo_max">Look Servo Max</string>>
    <string name="look_servo_max_key">pref_key_look_servo_max</string>
    <string name="look_servo_min_default">0</string>
    <string name="look_servo_max_default">180</string>

    <string name="tail_servo_min">Tail Servo Min</string>
    <string name="tail_servo_min_key">pref_key_tail_servo_min</string>
    <string name="tail_servo_max">Tail Servo Max</string>>
    <string name="tail_servo_max_key">pref_key_tail_servo_max</string>
    <string name="tail_servo_min_default">0</string>
    <string name="tail_servo_max_default">90</string>

    <string name="laser_servo_min">Laser Servo Min</string>
    <string name="laser_servo_min_key">pref_key_laser_servo_min</string>
    <string name="laser_servo_max">Laser Servo Max</string>>
    <string name="laser_servo_max_key">pref_key_laser_servo_max</string>
    <string name="laser_servo_min_default">0</string>
    <string name="laser_servo_max_default">10</string>

    <string name="key_servo_min">Key Servo Min</string>
    <string name="key_servo_min_key">pref_key_key_servo_min</string>
    <string name="key_servo_max">Key Servo Max</string>>
    <string name="key_servo_max_key">pref_key_key_servo_max</string>
    <string name="key_servo_min_default">80</string>
    <string name="key_servo_max_default">100</string>

    <string name="eye_color_right">Eye Color Right</string>
    <string name="eye_color_right_key">pref_key_eye_color_right</string>
    <string name="eye_color_right_default">1</string>

    <string name="eye_color_left">Eye Color Left </string>
    <string name="eye_color_left_key">pref_key_eye_color_left_servo_min</string>
    <string name="eye_color_left_servo_max_key">pref_key_eye_color_left</string>
    <string name="eye_color_left_default">1</string>

    <string name="red_alert_servo_min">Red Alert Servo Min</string>
    <string name="red_alert_servo_min_key">pref_key_red_alert_servo_min</string>
    <string name="red_alert_servo_max">Red Alert Servo Max</string>>
    <string name="red_alert_servo_max_key">pref_key_red_alert_servo_max</string>
    <string name="red_alert_servo_min_default">80</string>
    <string name="red_alert_servo_max_default">100</string>

    <string name="animate_servo_min">Animate Servo Min</string>
    <string name="animate_servo_min_key">pref_key_animate_servo_min</string>
    <string name="animate_servo_max">Animate Servo Max</string>>
    <string name="animate_servo_max_key">pref_key_animate_servo_max</string>
    <string name="animate_servo_min_default">80</string>
    <string name="animate_servo_max_default">100</string>

</resources>
