<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen  xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- opens a subscreen of settings -->
    <PreferenceCategory android:title="Servo Settings">
        <PreferenceScreen android:title="Tweet Servo Settings">
            <EditTextPreference
                android:key="@string/tweet_servo_min_key"
                android:defaultValue="@string/tweet_servo_min_default"
                android:title="@string/tweet_servo_min"
                android:dialogTitle="@string/tweet_servo_min"
                android:summary="@string/tweet_servo_min_default"/>
            <EditTextPreference
                android:key="@string/tweet_servo_max_key"
                android:defaultValue="@string/tweet_servo_max_default"
                android:title="@string/tweet_servo_max"
                android:dialogTitle="@string/tweet_servo_max"
                android:summary="@string/tweet_servo_max_default"/>
        </PreferenceScreen>

        <PreferenceScreen android:title="Flap Servo Settings">
            <EditTextPreference
                android:key="@string/flap_left_servo_min_key"
                android:defaultValue="@string/flap_left_servo_min_default"
                android:title="@string/flap_left_servo_min"
                android:dialogTitle="@string/flap_left_servo_min"
                android:summary="@string/flap_left_servo_min_default"/>
            <EditTextPreference
                android:key="@string/flap_left_servo_max_key"
                android:defaultValue="@string/flap_left_servo_max_default"
                android:title="@string/flap_left_servo_max"
                android:dialogTitle="@string/flap_left_servo_max"
                android:summary="@string/flap_left_servo_max_default"/>
            <EditTextPreference
                android:key="@string/flap_right_servo_min_key"
                android:defaultValue="@string/flap_right_servo_min_default"
                android:title="@string/flap_right_servo_min"
                android:dialogTitle="@string/flap_right_servo_min"
                android:summary="@string/flap_right_servo_min_default"/>
            <EditTextPreference
                android:key="@string/flap_right_servo_max_key"
                android:defaultValue="@string/flap_right_servo_max_default"
                android:title="@string/flap_right_servo_max"
                android:dialogTitle="@string/flap_right_servo_max"
                android:summary="@string/flap_right_servo_max_default"/>
        </PreferenceScreen>

        <PreferenceScreen android:title="Turn And Look Servo Settings">
            <EditTextPreference
                android:key="@string/turn_servo_min_key"
                android:defaultValue="@string/turn_servo_min_default"
                android:title="@string/turn_servo_min"
                android:dialogTitle="@string/turn_servo_min"
                android:summary="@string/turn_servo_min_default"/>
            <EditTextPreference
                android:key="@string/turn_servo_max_key"
                android:defaultValue="@string/turn_servo_max_default"
                android:title="@string/turn_servo_max"
                android:dialogTitle="@string/turn_servo_max"
                android:summary="@string/turn_servo_max_default"/>
            <EditTextPreference
                android:key="@string/look_servo_min_key"
                android:defaultValue="@string/look_servo_min_default"
                android:title="@string/look_servo_min"
                android:dialogTitle="@string/look_servo_min"
                android:summary="@string/look_servo_min_default"/>
            <EditTextPreference
                android:key="@string/look_servo_max_key"
                android:defaultValue="@string/look_servo_max_default"
                android:title="@string/look_servo_max"
                android:dialogTitle="@string/look_servo_max"
                android:summary="@string/look_servo_max_default"/>
        </PreferenceScreen>

        <PreferenceScreen android:title="Eye Settings">
            <EditTextPreference
                android:key="@string/blink_right_servo_min_key"
                android:defaultValue="@string/blink_right_servo_min_default"
                android:title="@string/blink_right_servo_min"
                android:dialogTitle="@string/blink_right_servo_max"
                android:summary="@string/blink_right_servo_min_default"/>
            <EditTextPreference
                android:key="@string/blink_right_servo_max_key"
                android:defaultValue="@string/blink_right_servo_max_default"
                android:title="@string/blink_right_servo_max"
                android:dialogTitle="@string/blink_right_servo_max"
                android:summary="@string/blink_right_servo_max"/>
            <EditTextPreference
                android:key="@string/blink_left_servo_min_key"
                android:defaultValue="@string/blink_left_servo_min_default"
                android:title="@string/blink_left_servo_min"
                android:dialogTitle="@string/blink_left_servo_max"
                android:summary="@string/blink_left_servo_min_default"/>
            <EditTextPreference
                android:key="@string/eye_color_right_key"
                android:defaultValue="@string/eye_color_right_default"
                android:title="@string/eye_color_right"
                android:dialogTitle="@string/eye_color_right"
                android:summary="@string/eye_color_right"/>
            <EditTextPreference
                android:key="@string/eye_color_left_key"
                android:defaultValue="@string/eye_color_left_default"
                android:title="@string/eye_color_left"
                android:dialogTitle="@string/eye_color_left"
                android:summary="@string/eye_color_left"/>
            <EditTextPreference
                android:key="@string/blink_left_servo_max_key"
                android:defaultValue="@string/blink_left_servo_max_default"
                android:title="@string/blink_left_servo_max"
                android:dialogTitle="@string/blink_left_servo_max"
                android:summary="@string/blink_left_servo_max"/>
        </PreferenceScreen>

        <PreferenceScreen android:title="Key Servo Settings">
            <EditTextPreference
                android:key="@string/key_servo_min_key"
                android:defaultValue="@string/key_servo_min_default"
                android:title="@string/key_servo_min"
                android:dialogTitle="@string/key_servo_min"
                android:summary="@string/key_servo_min_default"/>
            <EditTextPreference
                android:key="@string/key_servo_max_key"
                android:defaultValue="@string/key_servo_max_default"
                android:title="@string/key_servo_max"
                android:dialogTitle="@string/key_servo_max"
                android:summary="@string/key_servo_max_default"/>
        </PreferenceScreen>

        <PreferenceScreen android:title="Tail Servo Settings">
            <EditTextPreference
                android:key="@string/tail_servo_min_key"
                android:defaultValue="@string/tail_servo_min_default"
                android:title="@string/tail_servo_min"
                android:dialogTitle="@string/tail_servo_min"
                android:summary="@string/tail_servo_min_default"/>
            <EditTextPreference
                android:key="@string/tail_servo_max_key"
                android:defaultValue="@string/tail_servo_max_default"
                android:title="@string/tail_servo_max"
                android:dialogTitle="@string/tail_servo_max"
                android:summary="@string/tail_servo_max_default"/>
        </PreferenceScreen>


        <PreferenceScreen android:title="Laser Servo Settings">
            <EditTextPreference
                android:key="@string/laser_servo_min_key"
                android:defaultValue="@string/laser_servo_min_default"
                android:title="@string/laser_servo_min"
                android:dialogTitle="@string/laser_servo_min"
                android:summary="@string/laser_servo_min_default"/>
            <EditTextPreference
                android:key="@string/laser_servo_max_key"
                android:defaultValue="@string/laser_servo_max_default"
                android:title="@string/laser_servo_max"
                android:dialogTitle="@string/laser_servo_max"
                android:summary="@string/laser_servo_max_default"/>
        </PreferenceScreen>

        <PreferenceScreen android:title="Red Alert Servo Settings">
            <EditTextPreference
                android:key="@string/red_alert_servo_min_key"
                android:defaultValue="@string/red_alert_servo_min_default"
                android:title="@string/red_alert_servo_min"
                android:dialogTitle="@string/red_alert_servo_min"
                android:summary="@string/red_alert_servo_min_default"/>
            <EditTextPreference
                android:key="@string/red_alert_servo_max_key"
                android:defaultValue="@string/red_alert_servo_max_default"
                android:title="@string/red_alert_servo_max"
                android:dialogTitle="@string/red_alert_servo_max"
                android:summary="@string/red_alert_servo_max_default"/>
        </PreferenceScreen>

        <PreferenceScreen android:title="Animate Servo Settings">
            <EditTextPreference
                android:key="@string/animate_servo_min_key"
                android:defaultValue="@string/animate_servo_min_default"
                android:title="@string/animate_servo_min"
                android:dialogTitle="@string/animate_servo_min"
                android:summary="@string/animate_servo_min_default"/>
            <EditTextPreference
                android:key="@string/animate_servo_max_key"
                android:defaultValue="@string/animate_servo_max_default"
                android:title="@string/animate_servo_max"
                android:dialogTitle="@string/animate_servo_max"
                android:summary="@string/animate_servo_max_default"/>
        </PreferenceScreen>

    </PreferenceCategory>
</PreferenceScreen>