<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context="com.pepedyne.pepe.controller.PepeControlActivity">

    <com.pepedyne.pepe.views.SettingsButton
        android:id="@+id/settingsButton"
        android:layout_width="98dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Settings_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.729"
        app:layout_constraintStart_toEndOf="@+id/laser"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.pepedyne.pepe.views.LaserButton
        android:id="@+id/laser"
        android:layout_width="88dp"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Laser_Button"
        app:layout_constraintBottom_toTopOf="@+id/winkright"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="172dp"/>

    <com.pepedyne.pepe.views.FlapButton
        android:id="@+id/flap"
        android:layout_width="88dp"
        android:layout_height="35dp"
        android:layout_marginLeft="304dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Flap_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blink"/>

    <com.pepedyne.pepe.views.TweetButton
        android:id="@+id/tweet"
        android:layout_width="88dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Tweet_Button"
        app:layout_constraintEnd_toStartOf="@+id/laser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.pepedyne.pepe.views.PepeAIButton
        android:id="@+id/PepAI"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginRight="160dp"
        android:layout_marginBottom="68dp"
        android:text="Pep-A.I."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.pepedyne.pepe.views.JoyConView
        android:id="@+id/joycon"
        android:layout_width="426dp"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="908dp"
        tools:layout_editor_absoluteY="65dp"/>

    <com.pepedyne.pepe.views.PepeLookJoyStickView
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:id="@+id/joystick"
        android:layout_width="145dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="336dp"
        android:layout_marginRight="8dp"
        custom:JV_backgroundColor="#b9b9b9"
        custom:JV_borderColor="#000000"
        custom:JV_borderWidth="4dp"
        custom:JV_buttonColor="#020202"
        custom:JV_buttonSizeRatio="15%"
        custom:JV_fixedCenter="false"
        custom:layout_constraintHorizontal_bias="0.032"
        custom:layout_constraintLeft_toLeftOf="parent"
        custom:layout_constraintRight_toRightOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="@+id/joycon"
        />

    <com.pepedyne.pepe.views.PepeTurnJoyStickView
        android:id="@+id/joystick2"
        android:layout_width="145dp"
        android:layout_height="148dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="328dp"
        android:layout_marginRight="8dp"
        app:JV_backgroundColor="#b9b9b9"
        app:JV_borderColor="#000000"
        app:JV_borderWidth="4dp"
        app:JV_buttonColor="#020202"
        app:JV_buttonSizeRatio="15%"
        app:JV_fixedCenter="false"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/joycon"
        />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"/>

    <android.support.constraint.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"/>

    <com.pepedyne.pepe.views.Blink
        android:id="@+id/blink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="12dp"
        android:text="Blink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsButton"
        />

    <com.pepedyne.pepe.views.WinkLeft
        android:id="@+id/winkleft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:text="Wink Left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tweet"/>

    <com.pepedyne.pepe.views.WinkRight
        android:id="@+id/winkright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="48dp"
        android:text="Wink Right"
        app:layout_constraintBottom_toTopOf="@+id/flapright"
        app:layout_constraintEnd_toStartOf="@+id/blink"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toEndOf="@+id/winkleft"
        />

    <com.pepedyne.pepe.views.TailButton
        android:id="@+id/tail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="Tail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.817"
        app:layout_constraintStart_toEndOf="@+id/PepAI"
        app:layout_constraintTop_toBottomOf="@+id/joystick2"
        app:layout_constraintVertical_bias="0.396"/>

    <com.pepedyne.pepe.views.FlapLeftButton
        android:id="@+id/flapleft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="Flap Left"
        app:layout_constraintTop_toBottomOf="@+id/winkleft"
        tools:layout_editor_absoluteX="28dp"/>

    <com.pepedyne.pepe.views.FlapRightButton
        android:id="@+id/flapright"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="256dp"
        android:text="Flap Right"
        app:layout_constraintBottom_toTopOf="@+id/PepAI"
        app:layout_constraintEnd_toStartOf="@+id/flap"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toEndOf="@+id/flapleft"/>

    <com.pepedyne.pepe.views.KeyButton
        android:id="@+id/key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:text="Key"
        app:layout_constraintBottom_toTopOf="@+id/joystick"
        app:layout_constraintEnd_toStartOf="@+id/eye"
        app:layout_constraintHorizontal_bias="0.335"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flapleft"
        app:layout_constraintVertical_bias="0.818"/>

    <com.pepedyne.pepe.views.EyeControl
        android:id="@+id/eye"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:text="Eyes"
        app:layout_constraintBottom_toTopOf="@+id/joystick2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flap"
        app:layout_constraintVertical_bias="1.0"/>

    <com.pepedyne.pepe.views.FocusButton
        android:id="@+id/focus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="8dp"
        android:text="Focus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/PepAI"
        app:layout_constraintTop_toBottomOf="@+id/joystick"
        app:layout_constraintVertical_bias="0.484"/>

    <com.pepedyne.pepe.views.ConfusedButton
        android:id="@+id/confused"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginBottom="16dp"
        android:text="Confused"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"/>


</android.support.constraint.ConstraintLayout>
